# science-bot

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  lefthook.yml  pyproject.toml
executor/: Dockerfile  pyproject.toml
executor/executor/: __init__.py  _runner.py  api.py
executor/tests/: test_api.py
science-bot/: pyproject.toml
science-bot/science_bot/: __init__.py  __main__.py  benchmark.py  cli.py  tracing.py
science-bot/science_bot/agent/: __init__.py  contracts.py  orchestrator.py  prompts.py  runtime.py  summary.py
science-bot/science_bot/pipeline/: __init__.py  contracts.py  orchestrator.py
science-bot/science_bot/pipeline/classification/: __init__.py  schemas.py  stage.py
science-bot/science_bot/pipeline/execution/: __init__.py  aggregate.py  differential_expression.py  hypothesis_test.py  regression.py  schemas.py  stage.py  utils.py  variant_filtering.py
science-bot/science_bot/pipeline/resolution/: __init__.py  _agent.py  _prompts.py  _summaries.py  controller.py  planning.py  prompts.py  schemas.py  stage.py
science-bot/science_bot/pipeline/resolution/tools/: excel.py  (+5 more)
science-bot/science_bot/providers/: __init__.py  executor.py  llm.py
science-bot/tests/: conftest.py  test_benchmark.py  test_cli.py  test_tracing.py
science-bot/tests/agent/: test_orchestrator.py  test_runtime.py
science-bot/tests/pipeline/: test_contracts.py  test_orchestrator.py
science-bot/tests/pipeline/classification/: test_schemas.py  test_stage.py
science-bot/tests/pipeline/execution/: test_aggregate.py  test_differential_expression.py  test_hypothesis_test.py  test_regression.py  test_schemas.py  test_stage.py  test_utils.py  test_variant_filtering.py
science-bot/tests/pipeline/resolution/: test_assembly.py  test_controller.py  test_planning.py  test_prompts.py
science-bot/tests/providers/: test_executor.py  test_llm.py
(+5 files in other folders)
