[project]
name = "science-bot-tools"
version = "0.0.0"
description = "Tooling configuration for the science-bot monorepo."
requires-python = ">=3.10"
dependencies = [
    "executor",
    "science-bot",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["science-bot/tests", "executor/tests"]
python_files = ["test_*.py"]

[tool.ty.src]
exclude = ["science-bot/tests/", "executor/tests/"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.uv.sources]
executor = { path = "./executor", editable = true }
science-bot = { path = "./science-bot", editable = true }
